# junco-compiler_assisted_checkpointing

./: .gitignore  CMakeLists.txt  README.md
dev notes/: constraints.md
documentation/: constraints.md
examples/blur/ir_code/: split_blur.ll
examples/blur_xrt/: Makefile  Makefile~  versions.txt
examples/blur_xrt/scripts/: add_clock_en.py  add_clock_en.py~  add_mem_ckpt_param.py  add_mem_ckpt_param.py~  c_to_hdl.tcl  c_to_hdl.tcl~  create_vivado_project.tcl~  extract_mem_ckpt_size.py  extract_mem_ckpt_size.py~  gen_xo.tcl~  lud.cpp  lud.cpp~  xo_generation.tcl
examples/blur_xrt/src/: blur.cpp  blur.h  ckpt_mem_def.h  gaussian_filter_10_10.h  local_support.cpp  local_support.h  local_support_cpu.cpp  local_support_cpu_sequential.cpp  my_timer.h  stb_image.cpp  stb_image.h  stb_image_write.cpp  stb_image_write.h
examples/cholesky/: cholesky_kernel.cpp  cholesky_kernel.hpp  cholesky_kernel_cpu.cpp  cholesky_kernel_restore_cpu.cpp  local_support.h  local_support_cpu.cpp  local_support_cpu_sequential.cpp
examples/cholesky/include/: ap_common.h  ap_fixed.h  ap_fixed_base.h  ap_int_base.h  xilinx_hls_lib_2021_2.tgz
examples/cholesky/ir/: cholesky.ll  split_cholesky_out.ll
examples/cholesky/split_testing/: Makefile
examples/cholesky/testing/: Makefile  ckpt_sizes_bytes.json  ex  final_result.txt  live_values.json  tracked_values.json
examples/deprecated examples/blur/: blur.cpp  blur.h  gaussian_filter_10_10.h
examples/deprecated examples/ex1/: kernel.cpp
examples/deprecated examples/ex2/: main.cpp
examples/deprecated examples/ex3/: kernel.cpp  main.cpp
examples/deprecated examples/ex4/: main.cpp
examples/deprecated examples/ex4_float/: kernel.cpp  main.cpp
examples/deprecated examples/lud/: lud.bc  lud.cpp
examples/deprecated examples/simple_for_loop/: ckpt_sizes_bytes.json  foo.cpp  foo.ll  live_values.json  split_foo_out.ll  tracked_values.json
examples/ex1/: Makefile  main.cpp
examples/ex2/: kernel.cpp  kernel.ll
examples/ex2/testing/: ex2  kernel.ll
examples/ex2/testing2/: split_kernel2.ll  split_kernel2_out.ll
examples/ex3/: kernel.cpp  main.cpp
examples/ex3/testing/: ex3  split_kernel.ll
examples/ex4/: kernel.cpp  main.cpp
examples/ex4/testing/: Makefile  WIP_split_kernel_out_test_initial.ll  ex4  kernel.ll  kernel_mergereturn.ll  kernel_test.ll  split_kernel.ll  split_kernel_mergereturn.ll  split_kernel_mergereturn_out.ll  split_kernel_out.ll  split_kernel_out_2.ll  split_kernel_out_test.ll  split_kernel_out_test_initial.ll
examples/ex4/tmp/: split_kernel.ll
examples/ex4_float/: kernel.cpp
examples/ex4_float/testing/: Makefile  ex4_float  kernel.ll  split_kernel.ll  split_kernel_out.ll
examples/ex4_mix/: kernel.cpp  main.cpp
examples/ex4_mix/testing/: ex4_mix  kernel.ll  split_kernel.ll  split_kernel_out.ll
examples/lud/: lud.cpp
examples/lud/ir_code/: lud.ll  split_lud.ll  split_lud_out.ll
examples/lud_xrt/: Makefile  Makefile.tcl
examples/lud_xrt/scripts/: c_to_hdl.tcl  c_to_hdl.tcl~  create_vivado_project.tcl  gen_xo.tcl
examples/lud_xrt/src/: heartbeat.cpp  local_support.cpp  local_support.h  local_support_sequential.cpp  lud.cpp  lud.h  lud_restore.cpp
examples/lud_xrt/src  cpu/: heartbeat.h  local_support.cpp  lud.cpp  lud.h  my_timer.cpp
examples/simple_for_loop/: Makefile  ex
include/: DuplicateBB.h  InjectFuncCall.h  MBAAdd.h  MBASub.h
include/dale_passes/: ModifiedValues.h  ModuleTransformationPass.h  SplitConditionalBB.h  StripExternalDependancies.h  SubroutineInjection.h  TrackValues.h  TransformationPass.h
include/json/: JsonHelper.h
include/llvm_tutor_passes/: OpcodeCounter.h  myPass.h
include/popcorn_compiler/: LiveValues.h
inputs/: for_loop.c  for_loop_1.c  for_loop_2.c  for_loop_3.c  gcd_algorithm.c  input_for_cc.bc  input_for_hello.ll  simple_func.c
inputs/bc_files/: for_loop.bc  input_for_hello.bc  input_for_mba.bc
inputs/ll_files/: for_loop.ll  for_loop_1.ll  for_loop_2.ll  for_loop_3.ll  for_loop_o0.ll  gcd_algorithm.ll  input_for_cc.ll  input_for_duplicate_bb.ll  input_for_mba.ll  input_for_mba_sub.ll  input_for_riv.ll  kernel_test_O0.ll  simple_func.ll  split_blur.ll  split_for_loop.ll  split_kernel.ll  split_lud.ll  split_maxime_kernel.ll
inputs/my_inputs/: .foo.dot  my_add.bc  my_add.ll
json_template_files/: live_values_template.json  live_values_test_ref.json
lib/: BuildMulAddFunc.cpp  CMakeLists.txt  DuplicateBB.cpp  InjectFuncCall.cpp  MBAAdd.cpp  MBASub.cpp  OpcodeCounter.cpp  RIV.cpp  myPass.cpp
lib/dale_passes/: ModifiedValues.cpp  ModuleTransformationPass.cpp  SplitConditionalBB.cpp  StripExternalDependancies.cpp  SubroutineInjection.cpp  TrackValues.cpp  TransformationPass.cpp
lib/json/: JsonHelper.cpp
lib/llvm_tutor_passes/: ConvertFCmpEq.cpp  DuplicateBB.cpp  DynamicCallCounter.cpp  FindFCmpEq.cpp  InjectFuncCall.cpp  MBAAdd.cpp  MBASub.cpp  MergeBB.cpp  OpcodeCounter.cpp  RIV.cpp  Ratio.cpp  myPass.cpp
lib/popcorn_compiler/: LiveValues.cpp  LoopNestingTree.cpp
minimap2-fpga/src/: minimap2_opencl.cpp
minimap2-fpga/test/: Makefile  ckpt_sizes_bytes.json  kernel.ll  live_values.json  tracked_values.json
misc/maxime_manual_ckpts_sample_code/blur/: blur.cpp
outputs/: out.ll
performance_tests/: cpu_test_results.xlsx  fpga_test_results.xlsx
test/tests_for_MBA_add/: MBA_add_exec.ll
test/tests_for_MBA_sub/: MBA_sub_exec.ll
test/tests_for_inject_function_call/: inject_func_call_exec.ll
test/tests_for_opcode_counter/: OpcodeCounter.ll  OpcodeCounter_OptimisationPipeline.ll
test/tests_for_static_call_counter/: StaticCallCounter_Basic.ll
(+297 files in other folders)
